# Rust-GTA

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: camera.rs  car.rs  city.rs  hud.rs  input.rs  main.rs  pedestrian.rs  player.rs  resources.rs
