[package]
name = "mini-gta"
version = "0.1.0"
edition = "2021"
authors = ["Mini GTA"]
description = "A browser-style mini-GTA, ported from Three.js to Bevy"
license = "MIT"

[dependencies]
bevy = "0.15"
bevy_egui = "0.31"
rand = "0.8"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
